--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,49 @@
-# Pre-commit requirements (copied from requirements_test_pre_commit.txt)
-codespell==2.3.0
-ruff==0.6.8
-yamllint==1.35.1
+# Home Assistant Core (requirements.txt)
+aiodns==3.2.0
+aiohasupervisor==0.1.0
+aiohttp==3.10.9
+aiohttp_cors==0.7.0
+aiohttp-fast-zlib==0.1.1
+aiozoneinfo==0.2.1
+astral==2.2
+async-interrupt==1.2.0
+attrs==23.2.0
+atomicwrites-homeassistant==1.4.1
+awesomeversion==24.6.0
+bcrypt==4.2.0
+certifi>=2021.5.30
+ciso8601==2.3.1
+fnv-hash-fast==1.0.2
+hass-nabucasa==0.81.1
+httpx==0.27.2
+home-assistant-bluetooth==1.12.2
+ifaddr==0.2.0
+Jinja2==3.1.4
+lru-dict==1.3.0
+mashumaro==3.13.1
+PyJWT==2.9.0
+cryptography==43.0.1
+Pillow==10.4.0
+propcache==0.1.0
+pyOpenSSL==24.2.1
+orjson==3.10.7
+packaging>=23.1
+psutil-home-assistant==0.0.1
+python-slugify==8.0.4
+PyYAML==6.0.2
+requests==2.32.3
+SQLAlchemy==2.0.31
+typing-extensions>=4.12.2,<5.0
+ulid-transform==1.0.2
+urllib3>=1.26.5,<2
+uv==0.4.17
+voluptuous==0.15.2
+voluptuous-serialize==2.6.0
+voluptuous-openapi==0.0.5
+yarl==1.13.1
 
-# from requirements_test.txt
-# linters such as pylint should be pinned, as new releases
-# make new things fail. Manually update these pins when pulling in a
-# new version
 
-# types-* that have versions roughly corresponding to the packages they
-# contain hints for available should be kept in sync with them
-
+# Tetsing requirements (requirements_test.txt)
 astroid==3.3.4
 coverage==7.6.1
 freezegun==1.5.1
@@ -56,49 +89,10 @@ types-PyYAML==6.0.12.20240917
 types-requests==2.31.0.3
 types-xmltodict==0.13.0.3
 
-
-# from requirements.txt
-aiodns==3.2.0
-aiohasupervisor==0.1.0
-aiohttp==3.10.8
-aiohttp_cors==0.7.0
-aiohttp-fast-zlib==0.1.1
-aiozoneinfo==0.2.1
-astral==2.2
-async-interrupt==1.2.0
-attrs==23.2.0
-atomicwrites-homeassistant==1.4.1
-awesomeversion==24.6.0
-bcrypt==4.2.0
-certifi>=2021.5.30
-ciso8601==2.3.1
-fnv-hash-fast==1.0.2
-hass-nabucasa==0.81.1
-httpx==0.27.2
-home-assistant-bluetooth==1.12.2
-ifaddr==0.2.0
-Jinja2==3.1.4
-lru-dict==1.3.0
-mashumaro==3.13.1
-PyJWT==2.9.0
-cryptography==43.0.1
-Pillow==10.4.0
-pyOpenSSL==24.2.1
-orjson==3.10.7
-packaging>=23.1
-psutil-home-assistant==0.0.1
-python-slugify==8.0.4
-PyYAML==6.0.2
-requests==2.32.3
-SQLAlchemy==2.0.31
-typing-extensions>=4.12.2,<5.0
-ulid-transform==1.0.2
-urllib3>=1.26.5,<2
-uv==0.4.17
-voluptuous==0.15.2
-voluptuous-serialize==2.6.0
-voluptuous-openapi==0.0.5
-yarl==1.13.1
+# Additional requirements_test_pre_commit.txt
+codespell==2.3.0
+ruff==0.6.9
+yamllint==1.35.1
 
 # Packages from package_constraints.txt which are otherwise installed on run
 aiodhcpwatcher==1.0.2
@@ -106,7 +100,7 @@ aiodiscover==2.1.0
 aiodns==3.2.0
 aiohasupervisor==0.1.0
 aiohttp-fast-zlib==0.1.1
-aiohttp==3.10.8
+aiohttp==3.10.9
 aiohttp_cors==0.7.0
 aiozoneinfo==0.2.1
 astral==2.2
@@ -121,7 +115,7 @@ bleak==0.22.2
 bluetooth-adapters==0.19.4
 bluetooth-auto-recovery==1.4.2
 bluetooth-data-tools==1.20.0
-cached-ipaddress==0.6.0
+cached-ipaddress==0.7.0
 certifi>=2021.5.30
 ciso8601==2.3.1
 cryptography==43.0.1
@@ -145,6 +139,7 @@ orjson==3.10.7
 packaging>=23.1
 paho-mqtt==1.6.1
 Pillow==10.4.0
+propcache==0.1.0
 psutil-home-assistant==0.0.1
 PyJWT==2.9.0
 pymicro-vad==1.0.1
@@ -168,7 +163,6 @@ voluptuous==0.15.2
 yarl==1.13.1
 zeroconf==0.135.0
 
-
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.171
-homeassistant==2024.10.0
+pytest-homeassistant-custom-component==0.13.172
+homeassistant==2024.10.1
