--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Home Assistant Core (requirements.txt)
 aiodns==3.2.0
-aiohasupervisor==0.1.0
-aiohttp==3.10.9
+aiohasupervisor==0.2.0b0
+aiohttp==3.10.10
 aiohttp_cors==0.7.0
 aiohttp-fast-zlib==0.1.1
 aiozoneinfo==0.2.1
@@ -16,15 +16,14 @@ ciso8601==2.3.1
 fnv-hash-fast==1.0.2
 hass-nabucasa==0.81.1
 httpx==0.27.2
-home-assistant-bluetooth==1.12.2
+home-assistant-bluetooth==1.13.0
 ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
-mashumaro==3.13.1
 PyJWT==2.9.0
 cryptography==43.0.1
 Pillow==10.4.0
-propcache==0.1.0
+propcache==0.2.0
 pyOpenSSL==24.2.1
 orjson==3.10.7
 packaging>=23.1
@@ -40,7 +39,7 @@ uv==0.4.17
 voluptuous==0.15.2
 voluptuous-serialize==2.6.0
 voluptuous-openapi==0.0.5
-yarl==1.13.1
+yarl==1.15.1
 
 
 # Tetsing requirements (requirements_test.txt)
@@ -49,7 +48,7 @@ coverage==7.6.1
 freezegun==1.5.1
 mock-open==1.4.0
 mypy-dev==1.12.0a5
-pre-commit==3.8.0
+pre-commit==4.0.0
 pydantic==1.10.18
 pylint==3.3.1
 pylint-per-file-ignores==1.3.2
@@ -69,7 +68,7 @@ pytest-xdist==3.6.1
 pytest==8.3.3
 requests-mock==1.12.1
 respx==0.21.1
-syrupy==4.7.1
+syrupy==4.7.2
 tqdm==4.66.5
 types-aiofiles==24.1.0.20240626
 types-atomicwrites==1.4.5.1
@@ -80,11 +79,11 @@ types-chardet==0.1.5
 types-decorator==5.1.8.20240310
 types-paho-mqtt==1.6.0.20240321
 types-pillow==10.2.0.20240822
-types-protobuf==4.25.0.20240417
+types-protobuf==5.28.0.20240924
 types-psutil==6.0.0.20240901
-types-python-dateutil==2.9.0.20240906
+types-python-dateutil==2.9.0.20241003
 types-python-slugify==8.0.2.20240310
-types-pytz==2024.2.0.20240913
+types-pytz==2024.2.0.20241003
 types-PyYAML==6.0.12.20240917
 types-requests==2.31.0.3
 types-xmltodict==0.13.0.3
@@ -94,52 +93,52 @@ codespell==2.3.0
 ruff==0.6.9
 yamllint==1.35.1
 
+
 # Packages from package_constraints.txt which are otherwise installed on run
 aiodhcpwatcher==1.0.2
 aiodiscover==2.1.0
 aiodns==3.2.0
-aiohasupervisor==0.1.0
+aiohasupervisor==0.2.0b0
 aiohttp-fast-zlib==0.1.1
-aiohttp==3.10.9
+aiohttp==3.10.10
 aiohttp_cors==0.7.0
 aiozoneinfo==0.2.1
 astral==2.2
 async-interrupt==1.2.0
-async-upnp-client==0.40.0
+async-upnp-client==0.41.0
 atomicwrites-homeassistant==1.4.1
 attrs==23.2.0
 awesomeversion==24.6.0
 bcrypt==4.2.0
-bleak-retry-connector==3.5.0
-bleak==0.22.2
-bluetooth-adapters==0.19.4
+bleak-retry-connector==3.6.0
+bleak==0.22.3
+bluetooth-adapters==0.20.0
 bluetooth-auto-recovery==1.4.2
 bluetooth-data-tools==1.20.0
-cached-ipaddress==0.7.0
+cached-ipaddress==0.8.0
 certifi>=2021.5.30
 ciso8601==2.3.1
 cryptography==43.0.1
-dbus-fast==2.24.0
+dbus-fast==2.24.3
 fnv-hash-fast==1.0.2
 ha-av==10.1.1
 ha-ffmpeg==3.2.0
-habluetooth==3.4.0
+habluetooth==3.5.0
 hass-nabucasa==0.81.1
 hassil==1.7.4
-home-assistant-bluetooth==1.12.2
-home-assistant-frontend==20241002.2
+home-assistant-bluetooth==1.13.0
+home-assistant-frontend==20241002.3
 home-assistant-intents==2024.10.2
 httpx==0.27.2
 ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
-mashumaro==3.13.1
 mutagen==1.47.0
 orjson==3.10.7
 packaging>=23.1
 paho-mqtt==1.6.1
 Pillow==10.4.0
-propcache==0.1.0
+propcache==0.2.0
 psutil-home-assistant==0.0.1
 PyJWT==2.9.0
 pymicro-vad==1.0.1
@@ -160,9 +159,9 @@ uv==0.4.17
 voluptuous-openapi==0.0.5
 voluptuous-serialize==2.6.0
 voluptuous==0.15.2
-yarl==1.13.1
+yarl==1.15.1
 zeroconf==0.135.0
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.172
-homeassistant==2024.10.1
+pytest-homeassistant-custom-component==0.13.173
+homeassistant==2024.10.2
