--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,66 @@
 # Home Assistant Core (requirements.txt)
 aiodns==3.2.0
 aiohasupervisor==0.2.1
-aiohttp==3.11.0b3
+aiohttp==3.11.9
 aiohttp_cors==0.7.0
-aiohttp-fast-zlib==0.1.1
+aiohttp-fast-zlib==0.2.0
 aiozoneinfo==0.2.1
 astral==2.2
 async-interrupt==1.2.0
 attrs==24.2.0
 atomicwrites-homeassistant==1.4.1
+audioop-lts==0.2.1;python_version>='3.13'
 awesomeversion==24.6.0
 bcrypt==4.2.0
 certifi>=2021.5.30
 ciso8601==2.3.1
 fnv-hash-fast==1.0.2
-hass-nabucasa==0.84.0
+hass-nabucasa==0.85.0
 httpx==0.27.2
 home-assistant-bluetooth==1.13.0
 ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
-PyJWT==2.9.0
-cryptography==43.0.1
-Pillow==10.4.0
-propcache==0.2.0
-pyOpenSSL==24.2.1
-orjson==3.10.10
+PyJWT==2.10.1
+cryptography==44.0.0
+Pillow==11.0.0
+propcache==0.2.1
+pyOpenSSL==24.3.0
+orjson==3.10.12
 packaging>=23.1
 psutil-home-assistant==0.0.1
 python-slugify==8.0.4
 PyYAML==6.0.2
 requests==2.32.3
-securetar==2024.2.1
-SQLAlchemy==2.0.31
+securetar==2024.11.0
+SQLAlchemy==2.0.36
+standard-aifc==3.13.0;python_version>='3.13'
+standard-telnetlib==3.13.0;python_version>='3.13'
 typing-extensions>=4.12.2,<5.0
 ulid-transform==1.0.2
 urllib3>=1.26.5,<2
-uv==0.4.28
+uv==0.5.4
 voluptuous==0.15.2
 voluptuous-serialize==2.6.0
 voluptuous-openapi==0.0.5
-yarl==1.17.1
-webrtc-models==0.2.0
-
+yarl==1.18.3
+webrtc-models==0.3.0
 
 # Tetsing requirements (requirements_test.txt)
 astroid==3.3.5
-coverage==7.6.1
+coverage==7.6.8
 freezegun==1.5.1
 license-expression==30.4.0
 mock-open==1.4.0
-mypy-dev==1.14.0a2
+mypy-dev==1.14.0a5
 pre-commit==4.0.0
-pydantic==1.10.18
+pydantic==1.10.19
 pylint==3.3.1
 pylint-per-file-ignores==1.3.2
 pipdeptree==2.23.4
 pytest-asyncio==0.24.0
 pytest-aiohttp==1.0.5
-pytest-cov==5.0.0
+pytest-cov==6.0.0
 pytest-freezer==0.4.8
 pytest-github-actions-annotate-failures==0.2.0
 pytest-socket==0.7.0
@@ -67,22 +69,22 @@ pytest-timeout==2.3.1
 pytest-unordered==0.6.1
 pytest-picked==0.5.0
 pytest-xdist==3.6.1
-pytest==8.3.3
+pytest==8.3.4
 requests-mock==1.12.1
 respx==0.21.1
-syrupy==4.7.2
+syrupy==4.8.0
 tqdm==4.66.5
 types-aiofiles==24.1.0.20240626
 types-atomicwrites==1.4.5.1
-types-croniter==2.0.0.20240423
-types-beautifulsoup4==4.12.0.20240907
-types-caldav==1.3.0.20240824
+types-croniter==4.0.0.20241030
+types-beautifulsoup4==4.12.0.20241020
+types-caldav==1.3.0.20241107
 types-chardet==0.1.5
 types-decorator==5.1.8.20240310
 types-paho-mqtt==1.6.0.20240321
 types-pillow==10.2.0.20240822
-types-protobuf==5.28.0.20240924
-types-psutil==6.0.0.20240901
+types-protobuf==5.28.3.20241030
+types-psutil==6.1.0.20241102
 types-python-dateutil==2.9.0.20241003
 types-python-slugify==8.0.2.20240310
 types-pytz==2024.2.0.20241003
@@ -92,7 +94,7 @@ types-xmltodict==0.13.0.3
 
 # Additional requirements_test_pre_commit.txt
 codespell==2.3.0
-ruff==0.7.2
+ruff==0.8.1
 yamllint==1.35.1
 
 
@@ -101,8 +103,8 @@ aiodhcpwatcher==1.0.2
 aiodiscover==2.1.0
 aiodns==3.2.0
 aiohasupervisor==0.2.1
-aiohttp-fast-zlib==0.1.1
-aiohttp==3.11.0b3
+aiohttp-fast-zlib==0.2.0
+aiohttp==3.11.9
 aiohttp_cors==0.7.0
 aiozoneinfo==0.2.1
 astral==2.2
@@ -110,43 +112,44 @@ async-interrupt==1.2.0
 async-upnp-client==0.41.0
 atomicwrites-homeassistant==1.4.1
 attrs==24.2.0
+audioop-lts==0.2.1;python_version>='3.13'
 av==13.1.0
 awesomeversion==24.6.0
 bcrypt==4.2.0
 bleak-retry-connector==3.6.0
 bleak==0.22.3
-bluetooth-adapters==0.20.0
+bluetooth-adapters==0.20.2
 bluetooth-auto-recovery==1.4.2
 bluetooth-data-tools==1.20.0
 cached-ipaddress==0.8.0
 certifi>=2021.5.30
 ciso8601==2.3.1
-cryptography==43.0.1
+cryptography==44.0.0
 dbus-fast==2.24.3
 fnv-hash-fast==1.0.2
-go2rtc-client==0.1.0
-ha-ffmpeg==3.2.1
+go2rtc-client==0.1.1
+ha-ffmpeg==3.2.2
 habluetooth==3.6.0
-hass-nabucasa==0.84.0
-hassil==1.7.4
+hass-nabucasa==0.85.0
+hassil==2.0.5
 home-assistant-bluetooth==1.13.0
-home-assistant-frontend==20241106.0
-home-assistant-intents==2024.11.6
+home-assistant-frontend==20241127.4
+home-assistant-intents==2024.12.4
 httpx==0.27.2
 ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
 mutagen==1.47.0
-orjson==3.10.10
+orjson==3.10.12
 packaging>=23.1
 paho-mqtt==1.6.1
-Pillow==10.4.0
-propcache==0.2.0
+Pillow==11.0.0
+propcache==0.2.1
 psutil-home-assistant==0.0.1
-PyJWT==2.9.0
+PyJWT==2.10.1
 pymicro-vad==1.0.1
 PyNaCl==1.5.0
-pyOpenSSL==24.2.1
+pyOpenSSL==24.3.0
 pyserial==3.5
 pyspeex-noise==1.0.2
 python-slugify==8.0.4
@@ -154,19 +157,21 @@ PyTurboJPEG==1.7.5
 pyudev==0.24.1
 PyYAML==6.0.2
 requests==2.32.3
-securetar==2024.2.1
-SQLAlchemy==2.0.31
+securetar==2024.11.0
+SQLAlchemy==2.0.36
+standard-aifc==3.13.0;python_version>='3.13'
+standard-telnetlib==3.13.0;python_version>='3.13'
 typing-extensions>=4.12.2,<5.0
 ulid-transform==1.0.2
 urllib3>=1.26.5,<2
-uv==0.4.28
+uv==0.5.4
 voluptuous-openapi==0.0.5
 voluptuous-serialize==2.6.0
 voluptuous==0.15.2
-webrtc-models==0.2.0
-yarl==1.17.1
-zeroconf==0.136.0
+webrtc-models==0.3.0
+yarl==1.18.3
+zeroconf==0.136.2
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.181
-homeassistant==2024.11.0
+pytest-homeassistant-custom-component==0.13.190
+homeassistant==2024.12.0
