--- a/.github/workflows/docker-publish-test.yaml
+++ b/.github/workflows/docker-publish-test.yaml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker-Test
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -11,8 +11,8 @@ on:
   #   # Publish semver tags as releases.
   #   tags: [ 'v*.*.*' ]
   workflow_dispatch:
-  # pull_request:
-  #   branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -22,7 +22,7 @@ env:
 
 
 jobs:
-  build-test:
+  build:
 
     runs-on: ubuntu-latest
     permissions:
