--- a/.github/workflows/docker-publish-test.yaml
+++ b/.github/workflows/docker-publish-test.yaml
@@ -69,10 +69,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          #tags: ${{ steps.meta.outputs.tags }}
-          #labels: ${{ steps.meta.outputs.labels }}
-          tags: "test"
-          labels: "test"
+          push: true
+          tags: ghcr.io/iprak/custom-integration-image:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
