--- a/.github/workflows/docker-publish-test.yaml
+++ b/.github/workflows/docker-publish-test.yaml
@@ -61,6 +61,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=tag
+            type=ref,event=branch
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -70,6 +71,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/iprak/custom-integration-image:test
+          #tags: ghcr.io/iprak/custom-integration-image:test
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
