--- a/container_content/pyproject.toml
+++ b/container_content/pyproject.toml
@@ -929,7 +929,7 @@ mark-parentheses = false
 [tool.ruff.lint.flake8-tidy-imports.banned-api]
 "async_timeout".msg = "use asyncio.timeout instead"
 "pytz".msg = "use zoneinfo instead"
-"tests".msg = "You should not import tests"
+#"tests".msg = "You should not import tests"
 
 [tool.ruff.lint.isort]
 force-sort-within-sections = true
@@ -950,6 +950,7 @@ split-on-trailing-comma = false
 "homeassistant/auth/*/*" = ["TID252"]
 "homeassistant/components/*/*/*" = ["TID252"]
 "tests/components/*/*/*" = ["TID252"]
+"tests/*/*/*" = ["TID252"]
 
 # Temporary
 "homeassistant/**" = ["PTH"]
