--- a/container_content/.vscode/extensions.json
+++ b/container_content/.vscode/extensions.json
@@ -1,8 +1,7 @@
 {
-    "recommendations": [
-        "charliermarsh.ruff",
-        "esbenp.prettier-vscode",
-        "ms-python.python",
-        "mhutchie.git-graph"
-    ]
+  "recommendations": [
+    "charliermarsh.ruff",
+    "esbenp.prettier-vscode",
+    "ms-python.python"
+  ]
 }
