--- a/container_content/pyproject.toml
+++ b/container_content/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name        = "homeassistant"
-version     = "2025.3.0.dev0"
+version     = "2025.2.5"
 license     = {text = "Apache-2.0"}
 description = "Open-source home automation platform running on Python 3."
 readme      = "README.rst"
@@ -30,14 +30,14 @@ dependencies    = [
     "aiohasupervisor==0.3.0",
     "aiohttp==3.11.12",
     "aiohttp_cors==0.7.0",
-    "aiohttp-fast-zlib==0.2.2",
-    "aiohttp-asyncmdnsresolver==0.1.1",
-    "aiozoneinfo==0.2.3",
+    "aiohttp-fast-zlib==0.2.0",
+    "aiohttp-asyncmdnsresolver==0.1.0",
+    "aiozoneinfo==0.2.1",
     "astral==2.2",
-    "async-interrupt==1.2.1",
-    "attrs==25.1.0",
+    "async-interrupt==1.2.0",
+    "attrs==24.2.0",
     "atomicwrites-homeassistant==1.4.1",
-    "audioop-lts==0.2.1",
+    "audioop-lts==0.2.1;python_version>='3.13'",
     "awesomeversion==24.6.0",
     "bcrypt==4.2.0",
     "certifi>=2021.5.30",
@@ -50,7 +50,7 @@ dependencies    = [
     # When bumping httpx, please check the version pins of
     # httpcore, anyio, and h11 in gen_requirements_all
     "httpx==0.28.1",
-    "home-assistant-bluetooth==1.13.1",
+    "home-assistant-bluetooth==1.13.0",
     "ifaddr==0.2.0",
     "Jinja2==3.1.5",
     "lru-dict==1.3.0",
@@ -59,7 +59,7 @@ dependencies    = [
     "cryptography==44.0.1",
     "Pillow==11.1.0",
     "propcache==0.2.1",
-    "pyOpenSSL==25.0.0",
+    "pyOpenSSL==24.3.0",
     "orjson==3.10.12",
     "packaging>=23.1",
     "psutil-home-assistant==0.0.1",
@@ -67,22 +67,22 @@ dependencies    = [
     "PyYAML==6.0.2",
     "requests==2.32.3",
     "securetar==2025.1.4",
-    "SQLAlchemy==2.0.38",
-    "standard-aifc==3.13.0",
-    "standard-telnetlib==3.13.0",
+    "SQLAlchemy==2.0.37",
+    "standard-aifc==3.13.0;python_version>='3.13'",
+    "standard-telnetlib==3.13.0;python_version>='3.13'",
     "typing-extensions>=4.12.2,<5.0",
     "ulid-transform==1.2.0",
     # Constrain urllib3 to ensure we deal with CVE-2020-26137 and CVE-2021-33503
     # Temporary setting an upper bound, to prevent compat issues with urllib3>=2
     # https://github.com/home-assistant/core/issues/97248
     "urllib3>=1.26.5,<2",
-    "uv==0.5.27",
+    "uv==0.5.21",
     "voluptuous==0.15.2",
     "voluptuous-serialize==2.6.0",
     "voluptuous-openapi==0.0.6",
     "yarl==1.18.3",
     "webrtc-models==0.3.0",
-    "zeroconf==0.144.3"
+    "zeroconf==0.144.1"
 ]
 
 [project.urls]
