--- a/container_content/pyproject.toml
+++ b/container_content/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools==77.0.1"]
+requires = ["setuptools==77.0.3"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name        = "homeassistant"
-version     = "2025.4.0.dev0"
+version     = "2025.4.2"
 license     = "Apache-2.0"
 license-files = ["LICENSE*", "homeassistant/backports/LICENSE*"]
 description = "Open-source home automation platform running on Python 3."
@@ -28,12 +28,12 @@ dependencies    = [
     # change behavior based on presence of supervisor. Deprecated with #127228
     # Lib can be removed with 2025.11
     "aiohasupervisor==0.3.0",
-    "aiohttp==3.11.14",
+    "aiohttp==3.11.16",
     "aiohttp_cors==0.7.0",
     "aiohttp-fast-zlib==0.2.3",
     "aiohttp-asyncmdnsresolver==0.1.1",
     "aiozoneinfo==0.2.3",
-    "annotatedyaml==0.4.4",
+    "annotatedyaml==0.4.5",
     "astral==2.2",
     "async-interrupt==1.2.2",
     "attrs==25.1.0",
@@ -45,39 +45,79 @@ dependencies    = [
     "ciso8601==2.3.2",
     "cronsim==2.6",
     "fnv-hash-fast==1.4.0",
+    # ha-ffmpeg is indirectly imported from onboarding via the import chain
+    # onboarding->cloud->assist_pipeline->tts->ffmpeg. Onboarding needs
+    # to be setup in stage 0, but we don't want to also promote cloud with all its
+    # dependencies to stage 0.
+    "ha-ffmpeg==3.2.2",
     # hass-nabucasa is imported by helpers which don't depend on the cloud
     # integration
     "hass-nabucasa==0.94.0",
+    # hassil is indirectly imported from onboarding via the import chain
+    # onboarding->cloud->assist_pipeline->conversation->hassil. Onboarding needs
+    # to be setup in stage 0, but we don't want to also promote cloud with all its
+    # dependencies to stage 0.
+    "hassil==2.2.3",
     # When bumping httpx, please check the version pins of
     # httpcore, anyio, and h11 in gen_requirements_all
     "httpx==0.28.1",
     "home-assistant-bluetooth==1.13.1",
+    # home_assistant_intents is indirectly imported from onboarding via the import chain
+    # onboarding->cloud->assist_pipeline->conversation->home_assistant_intents. Onboarding needs
+    # to be setup in stage 0, but we don't want to also promote cloud with all its
+    # dependencies to stage 0.
+    "home-assistant-intents==2025.3.28",
     "ifaddr==0.2.0",
     "Jinja2==3.1.6",
     "lru-dict==1.3.0",
+    # mutagen is indirectly imported from onboarding via the import chain
+    # onboarding->cloud->assist_pipeline->tts->mutagen. Onboarding needs
+    # to be setup in stage 0, but we don't want to also promote cloud with all its
+    # dependencies to stage 0.
+    "mutagen==1.47.0",
+    # numpy is indirectly imported from onboarding via the import chain
+    # onboarding->cloud->alexa->camera->stream->numpy. Onboarding needs
+    # to be setup in stage 0, but we don't want to also promote cloud with all its
+    # dependencies to stage 0.
+    "numpy==2.2.2",
     "PyJWT==2.10.1",
     # PyJWT has loose dependency. We want the latest one.
     "cryptography==44.0.1",
     "Pillow==11.1.0",
     "propcache==0.3.0",
     "pyOpenSSL==25.0.0",
-    "orjson==3.10.15",
+    "orjson==3.10.16",
     "packaging>=23.1",
     "psutil-home-assistant==0.0.1",
+    # pymicro_vad is indirectly imported from onboarding via the import chain
+    # onboarding->cloud->assist_pipeline->pymicro_vad. Onboarding needs
+    # to be setup in stage 0, but we don't want to also promote cloud with all its
+    # dependencies to stage 0.
+    "pymicro-vad==1.0.1",
+    # pyspeex-noise is indirectly imported from onboarding via the import chain
+    # onboarding->cloud->assist_pipeline->pyspeex_noise. Onboarding needs
+    # to be setup in stage 0, but we don't want to also promote cloud with all its
+    # dependencies to stage 0.
+    "pyspeex-noise==1.0.2",
     "python-slugify==8.0.4",
+    # PyTurboJPEG is indirectly imported from onboarding via the import chain
+    # onboarding->cloud->camera->pyturbojpeg. Onboarding needs
+    # to be setup in stage 0, but we don't want to also promote cloud with all its
+    # dependencies to stage 0.
+    "PyTurboJPEG==1.7.5",
     "PyYAML==6.0.2",
     "requests==2.32.3",
     "securetar==2025.2.1",
     "SQLAlchemy==2.0.39",
     "standard-aifc==3.13.0",
     "standard-telnetlib==3.13.0",
-    "typing-extensions>=4.12.2,<5.0",
+    "typing-extensions>=4.13.0,<5.0",
     "ulid-transform==1.4.0",
     # Constrain urllib3 to ensure we deal with CVE-2020-26137 and CVE-2021-33503
     # Temporary setting an upper bound, to prevent compat issues with urllib3>=2
     # https://github.com/home-assistant/core/issues/97248
     "urllib3>=1.26.5,<2",
-    "uv==0.6.8",
+    "uv==0.6.10",
     "voluptuous==0.15.2",
     "voluptuous-serialize==2.6.0",
     "voluptuous-openapi==0.0.6",
@@ -472,8 +512,6 @@ filterwarnings = [
     # Ignore custom pytest marks
     "ignore:Unknown pytest.mark.disable_autouse_fixture:pytest.PytestUnknownMarkWarning:tests.components.met",
     "ignore:Unknown pytest.mark.dataset:pytest.PytestUnknownMarkWarning:tests.components.screenlogic",
-    # https://github.com/rokam/sunweg/blob/3.1.0/sunweg/plant.py#L96 - v3.1.0 - 2024-10-02
-    "ignore:The '(kwh_per_kwp|performance_rate)' property is deprecated and will return 0:DeprecationWarning:tests.components.sunweg.test_init",
 
     # -- design choice 3rd party
     # https://github.com/gwww/elkm1/blob/2.2.10/elkm1_lib/util.py#L8-L19
